# homework1_mlops

lesson2/: .pre-commit-config.yaml  pyproject.toml
lesson2/seminar/gx/expectations/: tips_validation_suite.json
lesson2/seminar/step4_ge_validation_data/: dvc.yaml
lesson2/seminar/step4_ge_validation_data/src/: evaluate.py  validate_model.py
